--- a/style.css
+++ b/style.css
@@ -1032,7 +1032,7 @@ textarea {
 	}
 }
 
-@media (max-width: 1199px) {
+@media (max-width: 991px) {
 	.main-navigation {
 		width: 100%;
 		position: relative;
